<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/tituloClubTextView"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="60dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/club"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingLeft="70dp"

            />


        <View android:layout_height="2dip"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            />

        <View
            android:id="@+id/separadorFinal"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_below="@id/tituloClubTextView"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/logoClubImage"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/unitedlogoonly"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/estadioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadio"
            android:textColor="@color/white"
            android:layout_below="@id/separadorFinal"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"

            />

        <ImageView
            android:id="@+id/estadioImageView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_below="@id/estadioTextView"
            app:srcCompat="@drawable/traffordfuera"
            android:layout_marginTop="10dp"
            />


        <TextView

            android:id="@+id/historiaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/estadioImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/historia"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/historiaDetalleTextView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:justificationMode="inter_word"
            android:layout_height="wrap_content"
            android:text="@string/historiaDetalle"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_below="@id/historiaTextView"
            android:background="@drawable/borde"

            />


        <TextView
            android:id="@+id/poweredClubTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_alignTop="@id/nikeLogoClubImageView"
            android:layout_toLeftOf="@id/nikeLogoClubImageView"
            android:text="@string/powered"
            android:textColor="@color/white"

            />



        <ImageView
            android:id="@+id/nikeLogoClubImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/nike"
            android:layout_below="@id/historiaDetalleTextView"
            android:layout_alignParentRight="true"
            />

        <Button
            android:id="@+id/volverClubButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nikeLogoClubImageView"
            android:text="@string/volver"
            android:backgroundTint="@color/white"
            android:textColor="@color/red"
            />
    </RelativeLayout>

</ScrollView>