<?xml version="1.0" encoding="utf-8"?>
<!-- Etiqueta layout para el binding  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- La variable noticia de tipo Noticia será la utilizada -->
    <data>
        <variable
            name="noticia"
            type="com.example.manutd_danieldipasqua.Noticia"
        />
        
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/tituloResultadosTextView"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="60dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/noticia"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingLeft="70dp"
            />


        <View android:layout_height="2dip"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            />

        <View
            android:id="@+id/separadorFinal"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_below="@id/tituloResultadosTextView"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/logoResultadosImage"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/unitedlogoonly"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/tituloNoticiaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separadorFinal"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/borde"
            android:padding="3dp"
            android:text="@{noticia.titulo}"

            />

        <TextView
            android:id="@+id/autorFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{noticia.autorFecha}"

            android:layout_below="@id/tituloNoticiaTextView"
            android:textColor="@color/white"
            android:textSize="11dp"
            android:layout_marginLeft="10dp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/cuerpoNoticiaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{noticia.cuerpo}"
            android:justificationMode="inter_word"
            android:layout_below="@id/autorFecha"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/borde"
            android:padding="3dp" />

        <Button
            android:id="@+id/volverNoticiaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cuerpoNoticiaTextView"
            android:text="@string/volver"
            android:backgroundTint="@color/white"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            />


        <TextView
            android:id="@+id/poweredMenuPrincipalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_alignTop="@id/nikeLogoMenuPrincipalImageView"
            android:layout_toLeftOf="@id/nikeLogoMenuPrincipalImageView"
            android:text="@string/powered"
            android:textColor="@color/white"
            />



        <ImageView
            android:id="@+id/nikeLogoMenuPrincipalImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/nike"
            android:layout_below="@id/volverNoticiaButton"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

</ScrollView>
</layout>